--- a/web-development-projects/src/pages/Project01/Project01.css
+++ b/web-development-projects/src/pages/Project01/Project01.css
@@ -19,6 +19,10 @@
   font-family: sans-serif; 
 }
 
+.backlink {
+    position: absolute;
+    z-index: 9999999 !important;
+}
 /* ===================== SELECTION HIGHLIGHT ===================== */
 
 .project01-container ::selection {
