--- a/web-development-projects/src/components/CardComponent/CardComponent.css
+++ b/web-development-projects/src/components/CardComponent/CardComponent.css
@@ -2,18 +2,16 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
-  width: 100%; 
-  max-width: 375px; 
-  min-height: 375px;
+  justify-content: space-between;
+  width: 100%;
+  margin: 0 auto;
   padding: 1rem;
   background-color: var(--color-white);
   border-radius: 6px;
   text-align: center;
   border: 1px solid var(--color-primary-soft);
-  height: 100%; 
-  justify-content: space-between;
 }
+
 
 .card:hover {
   border: 1px solid var(--color-primary);
@@ -33,6 +31,7 @@
   flex-direction: column;
   gap: 0.5rem;
   margin-bottom: 1rem;
+  flex-grow: 1;
 }
 
 .card__title {
@@ -52,7 +51,7 @@
   line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
-  height: 50px;
+  height: 60px;
 }
 
 .card__action {
@@ -66,9 +65,7 @@
   text-align: center;
   text-decoration: none;
   cursor: pointer;
-  transition:
-    background-color var(--transition-fast, 0.2s),
-    color var(--transition-fast, 0.2s);
+  transition: background-color var(--transition-fast, 0.2s), color var(--transition-fast, 0.2s);
 }
 
 .card__action:hover {
@@ -105,10 +102,4 @@
   color: var(--color-text-secondary);
   border-radius: 0 6px 0 6px;
   z-index: 2;
-}
-
-@media (max-width: 873px) {
-  .card {
-    max-width: 100%;
-  }
 }
