--- a/web-development-projects/src/components/CardComponent/CardComponent.css
+++ b/web-development-projects/src/components/CardComponent/CardComponent.css
@@ -30,7 +30,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
-  margin-bottom: 1rem;
+  margin: 1rem 0;
   flex-grow: 1;
 }
 
@@ -51,7 +51,6 @@
   line-clamp: 3;
   -webkit-box-orient: vertical;
   overflow: hidden;
-  height: 60px;
 }
 
 .card__action {
