--- a/web-development-projects/src/pages/Project01/Project01.css
+++ b/web-development-projects/src/pages/Project01/Project01.css
@@ -19,10 +19,46 @@
   font-family: sans-serif; 
 }
 
+/* ===================== BACKLINK BTN ===================== */
 .backlink {
-    position: absolute;
-    z-index: 9999999 !important;
+  position: absolute;
+  bottom: 1.5rem;
+  left: 1.5rem;
+
+  z-index: 9999999;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 48px;
+  height: 48px;
+
+  background-color: var(--p01-bg-white);
+
+  text-decoration: none;
+  cursor: pointer;
+
+  position: absolute;
+  top: 0;
+  left: 0;
 }
+
+.backlink img {
+  width: 32px;
+  transition: transform 0.2s ease;
+}
+
+.backlink:hover img {
+  transform: scale(1.2);
+}
+
+.backlink:focus-visible {
+  outline: 2px solid #ffc400;
+  outline-offset: 4px;
+}
+
+
 /* ===================== SELECTION HIGHLIGHT ===================== */
 
 .project01-container ::selection {
@@ -63,7 +99,6 @@
     background-color: var(--p01-primary-yellow);
     color: var(--p01-text-main);
     
-    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
     border: none;
     cursor: pointer;
     z-index: 1001 !important;
@@ -279,7 +314,6 @@
     border-radius: 0 20px 0 0;
     padding: 20px 40px;
     font-size: 0.85rem;
-    box-shadow: 0 -2px 10px rgba(0,0,0,0.05);
 }
 
 .project01-container .project__news-ticker p {
